--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.3",
     "angular2-flash-messages": "^3.0.1",
+    "angularfire2": "^5.1.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "edit-json-file": "^1.2.0",
